--- a/Project/Son/T4/Code_t4.ipynb
+++ b/Project/Son/T4/Code_t4.ipynb
@@ -52,8 +52,7 @@
     "        labels.append(label)\n",
     "    \n",
     "    return np.array(images), np.array(labels)\n",
-    "\n",
-    "# Định nghĩa mô hình CNN\n",
+    "#CNN\n",
     "def build_model(input_shape):\n",
     "    model = Sequential([\n",
     "        Input(shape=input_shape),\n",
@@ -78,21 +77,14 @@
     "    model.compile(optimizer=Adam(learning_rate=0.001), loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
     "    return model\n",
     "\n",
-    "# Load dữ liệu\n",
     "json_folder = \"/kaggle/input/btxrd-data/BTXRD/BTXRD/Annotations\"\n",
     "image_folder = \"/kaggle/input/btxrd-data/BTXRD/BTXRD/images\"\n",
     "X, y = load_data(json_folder, image_folder)\n",
     "\n",
-    "# Chia dữ liệu train/test\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "# Xây dựng mô hình\n",
     "model = build_model(input_shape=(128, 128, 3))\n",
-    "\n",
-    "# Huấn luyện mô hình\n",
     "model.fit(X_train, y_train, validation_data=(X_test, y_test), epochs=10, batch_size=32)\n",
     "\n",
-    "# Đánh giá mô hình\n",
     "loss, acc = model.evaluate(X_test, y_test)\n",
     "print(f\"Test Accuracy: {acc*100:.2f}%\")"
    ]
@@ -130,10 +122,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Định nghĩa kích thước ảnh\n",
     "IMG_SIZE = 28  # Giống với MNIST\n",
-    "\n",
-    "# Hàm tải dữ liệu từ JSON\n",
+    "# tải dữ liệu từ JSON\n",
     "def load_data(json_folder, image_folder):\n",
     "    images, labels = [], []\n",
     "    json_files = [f for f in os.listdir(json_folder) if f.endswith(\".json\")]\n",
@@ -161,15 +151,13 @@
     "    \n",
     "    return np.array(images).reshape(-1, IMG_SIZE, IMG_SIZE, 1), np.array(labels)\n",
     "\n",
-    "# Load dữ liệu\n",
     "json_folder = \"/kaggle/input/btxrd-data/BTXRD/BTXRD/Annotations\"\n",
     "image_folder = \"/kaggle/input/btxrd-data/BTXRD/BTXRD/images\"\n",
     "X, y = load_data(json_folder, image_folder)\n",
     "\n",
-    "# Chia tập train/test\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Xây dựng mô hình CNN\n",
+    "# CNN\n",
     "model = Sequential([\n",
     "    Conv2D(32, kernel_size=(3,3), activation='relu', input_shape=(IMG_SIZE, IMG_SIZE, 1)),\n",
     "    MaxPooling2D(pool_size=(2,2)),\n",
@@ -178,17 +166,12 @@
     "    Dense(1, activation='sigmoid')  # Binary classification\n",
     "])\n",
     "\n",
-    "# Compile mô hình\n",
     "model.compile(optimizer=Adam(), loss='binary_crossentropy', metrics=['accuracy'])\n",
-    "\n",
-    "# Huấn luyện mô hình\n",
     "history = model.fit(X_train, y_train, epochs=10, validation_data=(X_test, y_test))\n",
-    "\n",
-    "# Đánh giá mô hình\n",
     "loss, acc = model.evaluate(X_test, y_test)\n",
     "print(f\"Test Accuracy: {acc * 100:.2f}%\")\n",
     "\n",
-    "# Hiển thị một số kết quả dự đoán\n",
+    "# Hiển thị một số kết quả \n",
     "preds = (model.predict(X_test) > 0.5).astype(\"int32\")\n",
     "fig, axes = plt.subplots(3, 3, figsize=(8, 8))\n",
     "for i, ax in enumerate(axes.flat):\n",
@@ -233,10 +216,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Định nghĩa kích thước ảnh\n",
     "IMG_SIZE = 128  # Tăng kích thước ảnh lên phù hợp với mô hình lớn hơn\n",
     "\n",
-    "# Hàm tải dữ liệu từ JSON\n",
     "def load_data(json_folder, image_folder):\n",
     "    images, labels = [], []\n",
     "    json_files = [f for f in os.listdir(json_folder) if f.endswith(\".json\")]\n",
@@ -264,12 +245,10 @@
     "    \n",
     "    return np.array(images).reshape(-1, IMG_SIZE, IMG_SIZE, 1), np.array(labels)\n",
     "\n",
-    "# Load dữ liệu\n",
     "json_folder = \"/kaggle/input/btxrd-data/BTXRD/BTXRD/Annotations\"\n",
     "image_folder = \"/kaggle/input/btxrd-data/BTXRD/BTXRD/images\"\n",
     "X, y = load_data(json_folder, image_folder)\n",
     "\n",
-    "# Chia tập train/test\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "# Data Augmentation\n",
@@ -308,16 +287,14 @@
     "# Compile mô hình với Adam optimizer và learning rate thấp hơn\n",
     "model.compile(optimizer=Adam(learning_rate=0.0001), loss='binary_crossentropy', metrics=['accuracy'])\n",
     "\n",
-    "# Huấn luyện mô hình với data augmentation\n",
     "history = model.fit(datagen.flow(X_train, y_train, batch_size=32),\n",
     "                    validation_data=(X_test, y_test),\n",
     "                    epochs=20)\n",
     "\n",
-    "# Đánh giá mô hình\n",
     "loss, acc = model.evaluate(X_test, y_test)\n",
     "print(f\"Test Accuracy: {acc * 100:.2f}%\")\n",
     "\n",
-    "# Hiển thị một số kết quả dự đoán\n",
+    "# Hiển thị một số kết quả \n",
     "preds = model.predict(X_test)\n",
     "preds_labels = (preds > 0.5).astype(\"int32\")\n",
     "fig, axes = plt.subplots(3, 3, figsize=(8, 8))\n",
@@ -350,10 +327,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Định nghĩa kích thước ảnh\n",
     "IMG_SIZE = 48  # Giống với mô hình nhận diện cảm xúc\n",
     "\n",
-    "# Hàm tải dữ liệu từ JSON\n",
     "def load_data(json_folder, image_folder):\n",
     "    images, labels = [], []\n",
     "    json_files = [f for f in os.listdir(json_folder) if f.endswith(\".json\")]\n",
@@ -381,12 +356,10 @@
     "    \n",
     "    return np.array(images).reshape(-1, IMG_SIZE, IMG_SIZE, 1), np.array(labels)\n",
     "\n",
-    "# Load dữ liệu\n",
     "json_folder = \"/kaggle/input/btxrd-data/BTXRD/BTXRD/Annotations\"\n",
     "image_folder = \"/kaggle/input/btxrd-data/BTXRD/BTXRD/images\"\n",
     "X, y = load_data(json_folder, image_folder)\n",
     "\n",
-    "# Chia tập train/test\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "# Xây dựng mô hình CNN theo phương pháp file 3_Emotion_Reg_CNN.ipynb\n",
@@ -412,17 +385,12 @@
     "    Dense(1, activation='sigmoid')  # Binary classification\n",
     "])\n",
     "\n",
-    "# Compile mô hình\n",
     "model.compile(optimizer=Adam(learning_rate=0.0001), loss='binary_crossentropy', metrics=['accuracy'])\n",
-    "\n",
-    "# Huấn luyện mô hình\n",
     "history = model.fit(X_train, y_train, epochs=20, batch_size=64, validation_data=(X_test, y_test))\n",
-    "\n",
-    "# Đánh giá mô hình\n",
     "loss, acc = model.evaluate(X_test, y_test)\n",
     "print(f\"Test Accuracy: {acc * 100:.2f}%\")\n",
     "\n",
-    "# Hiển thị một số kết quả dự đoán\n",
+    "# Hiển thị một số kết quả \n",
     "preds = model.predict(X_test)\n",
     "preds_labels = (preds > 0.5).astype(\"int32\")\n",
     "fig, axes = plt.subplots(3, 3, figsize=(8, 8))\n",
